--- a/Nexcent/index.html
+++ b/Nexcent/index.html
@@ -163,7 +163,7 @@
         <p>The Next blog is the best place to read about the latest membership insights,trends and more.See who's joining the community,read about how our community are increasing their membership income and lot's more.</p>
         <div id="slider">
             <div class="card">
-                <img src="./Tesla.jpeg" alt="">
+                <img src="./image 1.png" alt="">
                 <div class="details">
                     <p>Creating Streamlined Safeguading processing with OneRen</p>
                     <h4>Read More
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./Tesla.jpeg" alt="">
+                <img src="./image 2.png" alt="">
                 <div class="details">
                     <p>What are your safeguarding responsibilities and how can you manage them?</p>
                     <h4>Read More
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./Tesla.jpeg" alt="">
+                <img src="./image 3.png" alt="">
                 <div class="details">
                     <p>Revamping the Membership Model with Triathlon Astralia</p>
                     <h4>Read More
