--- a/Nexcent/index.html
+++ b/Nexcent/index.html
@@ -125,7 +125,7 @@
             </div>
         </div>
     </div>
-
+  
     <div id="home6">
         <img src="./login-mobile.png" alt="">
         <div class="how">
@@ -160,7 +160,7 @@
 
     <div id="home8">
         <h1>Caring is the new marketing</h1>
-        <p>The Next blog is the best place to read about the latest membership insights,trends and more.See who's joining the community,read about how our community are increasing their membership income and lot's more.</p>
+        <p>The Next blog is the best place to read about the latest membership insights,trends and more.See who's joining the community,<br>read about how our community are increasing their membership income and lot's more.</p>
         <div id="slider">
             <div class="card">
                 <img src="./image 1.png" alt="">
@@ -183,11 +183,54 @@
             <div class="card">
                 <img src="./image 3.png" alt="">
                 <div class="details">
-                    <p>Revamping the Membership Model with Triathlon Astralia</p>
+                    <p>Revamping the Membership Model with <br>Triathlon Astralia</p>
                     <h4>Read More
                       <i class="fa-solid fa-arrow-right"></i>
                     </h4>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="pre-footer">
+        <p>Pellentesque suscipit fringilla libero eu.</p>
+        <button>Get a Demo
+            <i class="fa-solid fa-arrow-right"></i>
+        </button>
+    </div>
+
+    <div id="footer">
+        <div class="div1">
+            <img src="./nexcent-logo-white.png" alt="">
+            <p>Copyright © 2020 Landify UI Kit.</p>
+            <p>All rights reserved</p>
+            <div id="link">
+                <i id="insta" class="fa-brands fa-instagram"></i>
+                <i id="insta"class="fa-solid fa-globe"></i>
+                <i id="insta"class="fa-brands fa-x-twitter"></i>
+                <i id="insta"class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+        <div class="div2">
+            <div  id="com" class="company">
+                <h4>Company</h4>
+                <p>About Us</p>
+                <p>Blog</p>
+                <p>Contact Us</p>
+                <p>Pricing</p>
+                <p>Testimonials</p>
+            </div>
+            <div id="Support" class="company">
+                <h4>Support</h4>
+                <p>Help Center</p>
+                <p>Tearms of Service</p>
+                <p>Legal</p>
+                <p>Privacy Policy</p>
+                <p>Status</p>
+            </div>
+            <div id="Support" class="company">
+                <h4>Stay up to date</h4>
+                <input id="mail" type="email" placeholder="Enter your email" name="email" required/>
             </div>
         </div>
     </div>
