--- a/Nike/index.html
+++ b/Nike/index.html
@@ -3,10 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nike</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <p>nike</p>
+    <header>
+        <div id="logo">
+            <img src="./jordan.png" alt="logo">
+        </div>
+        <div id="link">
+            <ul><a id="border" href="">Find a Store</a></ul>
+            <ul><a id="border" href="">Help</a></ul>
+            <ul><a id="border" href="">Join Us</a></ul>
+            <ul><a href="">Sign In</a></ul>
+        </div> 
+    </header>
+
+
+    <nav>
+        <a href="./index.html" id="logo">
+            <img src="./Nike-Logo-PNG-Images-HD.png" alt="logo">
+        </a>
+        <ul>
+            <li><a href="">New & Featured</a></li>
+            <li><a href="">Men</a></li>
+            <li><a href="">Women</a></li>
+            <li><a href="">Kids</a></li>
+            <li><a href="">Sale</a></li>
+            <li><a href="">SNKRS</a></li>
+        </ul>
+        <div class="button">
+            <div class="search">
+                 <i class="fa-solid fa-magnifying-glass"></i>
+                 <input type="text" placeholder="Search">
+            </div>
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-user"></i>
+            <i class="fa-solid fa-bag-shopping"></i>
+            <i class="fa-solid fa-bars" id="bars"></i>
+        </div>
+    </nav>
+
+
+    <div id="info">
+        <h5>New Styles On Sale: Up To 40% Off </h5>
+        <a href="">Shop All Our New Markdowns</a>
+    </div>
+
+
+    <div id="banner">
+        <img src="./nike-just-do-it.avif" alt="">
+    </div>
+
+    <div id="look-of-football">
+        <p>Look of Football</p>
+        <h4 id="field">Field General</h4>
+        <p>Crafted with purpose. Driven by passion. Designed for everyday.</p>
+        <button>Shop</button>
+    </div>
+
+    <div id="featured">
+       <p class="featured">Featured</p>
+       <div class="categories">
+        <div class="box" id="box1">
+            <div class="content">
+                    <p>Just In</p>
+                    <p id="name">Nike Ava Rover</p>
+                    <button>Shop</button>
+            </div>
+        </div>
+        <div class="box" id="box2">
+                <div class="content">
+                    <p>Run Bigger</p>
+                    <p id="name">The Vomero Plus Launches 8.7.</p>
+                    <button>Get Notified</button>
+                </div>
+            </div>
+            <div class="box" id="box3">
+                <div class="content">
+                    <p>Nike Football</p>
+                    <p id="name">Introducing Scary Good Pack</p>
+                    <button>Shop</button>
+                </div>
+            </div>
+            <div class="box" id="box4">
+                <div class="content">
+                    <p>Air jordan 4RM</p>
+                    <p id="name">Ride Easy</p>
+                    <button>Shop</button>
+                </div>
+            </div>
+       </div>
+    </div>
+
+
+    <div id="shop-Icons">
+        <p>Shop by Icons</p>
+    </div>
 </body>
 </html>
